--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
                 <a href="#services">Services</a>
             </li>
             <li>
-                <a href="#software-engineering">Software Engineering</a>
+                <a href="./packages-page.html">Software Engineering</a>
             </li>
             <li>
                 <a href="#contact">Contact</a>
@@ -426,9 +426,12 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Reid Wixom</strong>
+                        <br>
+                        <small>
+                        Greater Chicago Area
+                    </small>
                     </h4>
-                    <p>4090 East 4th Road
-                        <br>Mendota, Illinois 61342</p>
+
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (815) 910-3437</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:wixomreid@gmail.com">wixomreid@gmail.com</a>
