--- a/html/packages-page.html
+++ b/html/packages-page.html
@@ -35,9 +35,38 @@
 </head>
 
 <body>
+
+
+    <!-- Navigation -->
+    <a id="menu-toggle" href="#" class="btn btn-dark btn-lg toggle"><i class="fa fa-bars"></i></a>
+    <nav id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <a id="menu-close" href="#" class="btn btn-light btn-lg pull-right toggle"><i class="fa fa-times"></i></a>
+            <li class="sidebar-brand">
+                <a href="#top">Reid Wixom</a>
+            </li>
+            <li>
+                <a href="./index.html">Home</a>
+            </li>
+            <li>
+                <a href="#about">3D-Models</a>
+            </li>
+            <li>
+                <a href="https://github.com/lameimpala/university-code-samples">University Code Samples</a>
+            </li>
+            <li>
+                <a href="#software-engineering">Software Engineering</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+        </ul>
+    </nav>
+
+
     <header id="top" class="header packages-bg">
         <div class="text-vertical-center">
-            <h1>Package Management System</h1>
+            <h1>Custom Application Development</h1>
             <h3>Northern Illinois University </h3>
             <h4>Department of Housing </h4>
 
@@ -49,12 +78,13 @@
         </div>
     </header>
     <section>
-        <div class="container" id="overview">
+        <div class="container" id="overview" class="header-inverse">
             <div class="text-vertical-center" style="height:300px;">
                 <div class="text-center">
                     <h2>
-                        Project Overview
+                        Package Management System
                     </h2>
+                    <hr class="small">
                 </div>
                 <div class="row pg-aside">
 
@@ -163,9 +193,12 @@
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Reid Wixom</strong>
+                        <br>
+                        <small>
+                        Greater Chicago Area
+                    </small>
                     </h4>
-                    <p>4090 East 4th Road
-                        <br>Mendota, Illinois 61342</p>
+
                     <ul class="list-unstyled">
                         <li><i class="fa fa-phone fa-fw"></i> (815) 910-3437</li>
                         <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:wixomreid@gmail.com">wixomreid@gmail.com</a>
